
Core and builtins
-----------------

- Patch #1673759: add a missing overflow check when formatting floats
  with %G.

- Patch #1733960: Allow T_LONGLONG to accept ints.

- Prevent expandtabs() on string and unicode objects from causing a segfault
  when a large width is passed on 32-bit platforms.

- Bug #1733488: Fix compilation of bufferobject.c on AIX.


Library
-------

- Bug #1734723: Fix repr.Repr() so it doesn't ignore the maxtuple attribute.

- Bug #1728403: Fix a bug that CJKCodecs StreamReader hangs when it
  reads a file that ends with incomplete sequence and sizehint argument
  for .read() is specified.

- Bug #1730389: Have time.strptime() match spaces in a format argument with
  ``\s+`` instead of ``\s*``.

- SF 1668596/1720897: distutils now copies data files
  even if package_dir is empty.

- Fix bug in marshal where bad data would cause a segfault due to
  lack of an infinite recursion check.

- HTML-escape the plain traceback in cgitb's HTML output, to prevent
  the traceback inadvertently or maliciously closing the comment and
  injecting HTML into the error page.

- Bug #1290505: Properly clear time.strptime's locale cache when the locale
  changes between calls.  Backport of r54646 and r54647.

- Bug #1706381: Specifying the SWIG option "-c++" in the setup.py file
  (as opposed to the command line) will now write file names ending in
  ".cpp" too.

- Patch #1695229: Fix a regression with tarfile.open() and a missing name
  argument.

- tarfile.py: Fix directory names to have only one trailing slash.

- Fix test_pty.py to not hang on OS X (and theoretically other *nixes) when
  run in verbose mode.

- Bug #1693258: IDLE would show two "Preferences" menu's with some versions
  of Tcl/Tk


Extension Modules
-----------------

- Bug #1703286: ctypes no longer truncates 64-bit pointers.

- Bug #1721309: prevent bsddb module from freeing random memory.

- Bug #1726026: Correct the field names of WIN32_FIND_DATAA and